[package]
name = "wrt-component"
version.workspace = true
edition.workspace = true
description = "WebAssembly Component Model support for WRT"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/wrt-component"
keywords = ["wasm", "webassembly", "runtime", "component-model"]
categories = ["wasm", "no-std"]

[lints]
workspace = true

[dependencies]
wrt-error = { workspace = true, default-features = false }
wrt-format = { workspace = true, default-features = false }
wrt-host = { workspace = true, default-features = false }
wrt-foundation = { workspace = true, default-features = false }
wrt-intercept = { workspace = true, default-features = false }
wrt-decoder = { workspace = true, default-features = false }
wrt-runtime = { workspace = true, default-features = false }
wrt-sync = { workspace = true, default-features = false }

# No-std support (removed invalid alloc dependency)

# Optional dependencies
log = { version = "0.4", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
# By default, no features for pure no_std compatibility
# Binary choice: std OR no_std (no alloc middle ground)
default = []

# Standard library support
std = [
    "wrt-format/std",
    "wrt-host/std",
    "wrt-intercept/std",
    "wrt-decoder/std",
    "wrt-runtime/std",
    "wrt-sync/std",
    "wrt-error/std",
    "wrt-foundation/std",
    "wrt-foundation/wrt-allocator",
    "dep:log"]

# Allocation support for no_std environments
alloc = [
    "wrt-foundation/alloc",
    "wrt-format/alloc",
    "wrt-decoder/alloc",
    "wrt-runtime/alloc",
    "wrt-host/alloc",
    "wrt-intercept/alloc"]

# Safety-critical features
safety-asil-c = ["wrt-foundation/wrt-allocator"]

# For compatibility with verification script
# This is a no-op since the crate is no_std by default
no_std = []


# Verification with Kani
kani = ["wrt-host/kani", "wrt-intercept/kani", "wrt-foundation/kani"]

# Performance and safety features
optimize = [
    "wrt-format/optimize",
    "wrt-host/optimize",
    "wrt-foundation/optimize",
    "wrt-intercept/optimize",
    "wrt-decoder/optimize",
    "wrt-runtime/optimize"
]

# Safety features (always includes alloc)
safety-asil-b = [
    "wrt-format/safety-asil-b",
    "wrt-host/safety-asil-b",
    "wrt-foundation/safety-asil-b",
    "wrt-intercept/safety-asil-b",
    "wrt-decoder/safety-asil-b",
    "wrt-runtime/safety-asil-b",
    "std"
]

# Debug logging
debug-log = []

# Disable panic handler for library builds to avoid conflicts

# Safe memory implementations
safe-memory = [
    "wrt-foundation/safe-memory",
    "wrt-format/safe-memory",
    "wrt-runtime/safe-memory"]

# Component Model features
component-model-core = ["wrt-format/component-model-core"]
component-model-values = ["wrt-format/component-model-values"]
component-model-resources = ["wrt-format/component-model-resources"]
component-model-async = ["wrt-foundation/component-model-async"]
component-model-error-context = ["wrt-foundation/component-model-error-context"]
component-model-threading = ["wrt-foundation/component-model-threading"]
component-model-all = [
    "component-model-core",
    "component-model-values",
    "component-model-resources",
    "component-model-async",
    "component-model-error-context",
    "component-model-threading"
]
safety-asil-d = ["safety-asil-c"]


[[example]]
name = "component_info_simple"
path = "examples/component_info_simple.rs"
required-features = ["std"]

[[example]]
name = "interceptor_example"
path = "examples/interceptor_example.rs"
required-features = ["std"]

[[bench]]
name = "wrt_allocator_benchmarks"
harness = false
required-features = ["std", "safety-asil-c"]

[[bench]]
name = "zero_cost_validation"
harness = false
required-features = ["std", "safety-asil-c"]


 