[package]
name = "wrt-dagger"
version = "0.2.0"
edition = "2021"
description = "Containerized build wrapper for WRT using Dagger"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pulseengine/wrt"
documentation = "https://docs.rs/wrt-dagger"

[features]
default = []
# Optional feature for enabling Dagger integration
dagger = ["dep:dagger-sdk"]

[dependencies]
# Core dependencies
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Optional Dagger dependency (specify a working version)
dagger-sdk = { version = "0.11", optional = true }

# WRT build system
wrt-build-core = { path = "../wrt-build-core" }

# For CLI binary
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.0"