[package]
name = "wrt-decoder"
version.workspace = true
edition.workspace = true
description = "WebAssembly module decoder for wrt runtime"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["wasm", "webassembly", "decoder", "parser", "runtime"]
categories = ["wasm", "parsing", "no-std", "embedded"]

[lints]
workspace = true

[dependencies]
# Error handling
wrt-error = { workspace = true, default-features = false }
# Format handling
wrt-format = { workspace = true, default-features = false }
# Foundation library 
wrt-foundation = { workspace = true, default-features = false }

# Core dependencies
log = { version = "0.4", optional = true }
# WAT parsing (for testing)
wat = { version = "1.231.0", optional = true }

[dev-dependencies]
criterion = "0.6"
tempfile = "3.8"
proptest = "1.4"
hex = "0.4"
wat = "1.231.0"

[features]
default = []
# Binary choice: std OR no_std (no alloc middle ground)
std = ["wrt-format/std", "wrt-foundation/std", "wrt-foundation/wrt-allocator"]
# For compatibility with verification script
# This is a no-op since the crate is no_std by default
no_std = []

# Allocation support for no_std environments
alloc = ["wrt-foundation/alloc", "wrt-format/alloc"]
optimize = []
safety-asil-b = ["wrt-foundation/safety-asil-b", "wrt-format/safety-asil-b"]
# Safety-critical features
safety-asil-c = ["wrt-foundation/wrt-allocator"]
wat = ["dep:wat", "std"]

# Component Model features
component-model-core = ["wrt-format/component-model-core"]
component-model-values = ["wrt-format/component-model-values"]
component-model-resources = ["wrt-format/component-model-resources"]
component-model-fixed-lists = ["wrt-format/component-model-fixed-lists"]
component-model-namespaces = ["wrt-format/component-model-namespaces"]
component-model-all = [
    "component-model-core",
    "component-model-values",
    "component-model-resources",
    "component-model-fixed-lists",
    "component-model-namespaces"
]

# Type conversion feature
conversion = ["wrt-format/conversion"]

# Disable panic handler for library builds to avoid conflicts
safety-asil-d = ["safety-asil-c"]
kani = []


