[package]
name = "wrt-error"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Error handling for the WRT WebAssembly runtime"

[lib]
name = "wrt_error"
path = "src/lib.rs"

[dependencies]
# No external dependencies by default
# Optional dependencies
anyhow = { workspace = true, optional = true }

# For advanced error integration with other libraries
wasmparser = { version = "0.227.1", optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "2.0", optional = true }
wat = { version = "1.229.0", optional = true }
wasi-common = { version = "17.0.3", optional = true }
cap-std = { version = "2.0.0", optional = true }

[features]
default = ["std"]
# For allocation support without std
alloc = []
# Standard library features (includes alloc)
std = ["alloc"]
# For complete no_std/no_alloc support
no_std = []
# Optional integration with other libraries
wasmparser = ["dep:wasmparser", "std"]
serde_json = ["dep:serde_json", "std"]
bincode = ["dep:bincode", "std"]
wat = ["dep:wat", "std"]
wasi = ["dep:wasi-common", "dep:cap-std", "std"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(test)', 'cfg(kani)', 'cfg(coverage)', 'cfg(doc)'] }

# Configuration for Kani verification
# This will only be used when running `cargo kani`
[package.metadata.kani]
enabled-checks = ["assertion", "overflow"]
default-unwind = 2