[package]
name = "wrt-format"
version.workspace = true
edition.workspace = true
description = "WebAssembly format handling for WRT"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["wasm", "webassembly", "format", "binary", "no-std"]
categories = ["wasm", "parsing", "data-structures", "no-std", "embedded"]

[dependencies]
wrt-error = { workspace = true, default-features = false }
wrt-foundation = { workspace = true, default-features = false }

[dev-dependencies]
# For property testing
proptest = "1.0.0"

# For formal verification (moved to dependencies with optional flag)
[dependencies.kani-verifier]
version = "0.62.0"
optional = true

[features]
default = []
# Binary choice: std OR no_std (no alloc middle ground)
std = ["wrt-foundation/std", "wrt-foundation/wrt-allocator"]
# This crate is no_std by default, this feature is a no-op for compatibility
no_std = []

# Allocation support for no_std environments
alloc = ["wrt-foundation/alloc"]
optimize = ["wrt-foundation/optimize"]

# Safety level presets using capability-based features
qm = ["wrt-foundation/dynamic-allocation"]
asil-a = ["wrt-foundation/bounded-collections"]
asil-b = ["wrt-foundation/bounded-collections"]
asil-c = ["wrt-foundation/static-memory-safety"]
asil-d = ["wrt-foundation/asil-d"]

# Legacy compatibility features
safe-memory = ["asil-b"]
safety-asil-b = ["asil-b"]
safety-asil-c = ["asil-c"]
safety-asil-d = ["asil-d"]

# The 'kani' feature enables formal verification with the Kani verifier
kani = ["dep:kani-verifier"]

# Component Model features
component-model-core = ["wrt-foundation/component-model-core"]
component-model-values = ["wrt-foundation/component-model-values"]
component-model-resources = ["wrt-foundation/component-model-resources"]
component-model-canonical = []
component-model-fixed-lists = ["wrt-foundation/component-model-fixed-lists"]
component-model-error-context = ["wrt-foundation/component-model-error-context"]
component-model-async = ["wrt-foundation/component-model-async"]
component-model-threading = ["wrt-foundation/component-model-threading"]
component-model-namespaces = ["wrt-foundation/component-model-namespaces"]

# Grouped features
component-model-all = [
    "component-model-core",
    "component-model-values",
    "component-model-resources",
    "component-model-canonical",
    "component-model-fixed-lists",
    "component-model-error-context",
    "component-model-async",
    "component-model-threading",
    "component-model-namespaces"
]

# Type conversion feature
conversion = []


# LSP (Language Server Protocol) support
lsp = ["std"]

# WIT parsing support for no_std environments
wit-parsing = []

# Disable panic handler for library builds to avoid conflicts

[lints]
workspace = true

# Configuration for Kani verification
[package.metadata.kani]
default-unwind = 2